{
    "name": "SilicomPlayerActions",
    "maps": [
        {
            "name": "MouseKeyboard",
            "id": "9a339751-a659-4e83-b782-dc8098e1eb67",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "c5702d6a-0d9b-49b8-aa44-484b2cd51189",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThirdAxisMovement",
                    "type": "Value",
                    "id": "dfeb2a04-af32-4529-8622-43966cab58bb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "2719a633-2493-41dc-b6c3-48430b11f0b0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "48247fab-3b29-4328-9f3f-d4c56def68b0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "8c7a1e43-aabb-4da0-af7c-5acd69557bb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "1d02da21-d5bd-43c3-a5d5-119179d9bcd7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "6d82ec21-a9bf-4008-96ee-ad7a67d61a0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "V",
                    "type": "Button",
                    "id": "7eb51fa8-76d6-443e-aa1a-bf093e1f963a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShiftY",
                    "type": "Button",
                    "id": "50a4e1af-a092-4e5e-86fd-5ceae78fe710",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "R",
                    "type": "Button",
                    "id": "513a1576-6fb2-4e3f-95bb-92007f626c4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "T",
                    "type": "Button",
                    "id": "bfbe1e7f-2094-4546-860d-961ea017cc27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "P",
                    "type": "Button",
                    "id": "244906d1-7f12-46d6-912e-e6ef889d025d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "M",
                    "type": "Button",
                    "id": "1a6b643a-c262-49e8-aa18-4ae47097a2af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "ZQSD",
                    "id": "9c4d4d4a-0370-4882-89f7-a1ae73d23e7e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f12d636c-9b2f-4c5d-9065-beca6efb463b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "28861f61-66f7-4c06-9fd2-8f94f522a26a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7f23bd65-a33f-47c9-bbd8-ee441794ef17",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4afe7745-fe01-4ac4-94e5-5d575b4c3222",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4fdaeff2-6f26-4db8-88b1-5cc77b64c413",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1703fd68-e401-42b7-8003-814aaa235b1f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed883941-be4e-4d7b-bebe-b157a2b23960",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1f5d916-5855-493f-9e84-2dc1d2ee45ce",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "212b75d2-ff09-4f6b-b23d-a4898ad50d5e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "290a4f48-c5d9-4071-b62a-3d638a082e4e",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "V",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1f0b939-da79-404d-bb54-36ebde601299",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Clamp(min=-2,max=2)",
                    "groups": "",
                    "action": "ThirdAxisMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AE",
                    "id": "7921abd3-992b-4e1b-83b7-e87b762bb5b1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThirdAxisMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "316ec193-3873-4069-aed1-0ac7784f2931",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThirdAxisMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1f56f41e-daab-44ba-a9dd-d9724c970166",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThirdAxisMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ShiftY",
                    "id": "aa8ff6e0-c3f4-4be4-81fc-9abd8a19c452",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "b8ed77b2-f613-4e26-92cf-026bfd30be4f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "ShiftY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "140ecc84-1b6b-4db3-9510-5baf1a30a1c0",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "ShiftY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "84566485-8b81-4412-817f-564ff089777f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28ef968f-3476-4e4c-b5ed-4cf14dfae8a2",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8469d85b-43c0-4f1f-a1bd-a899051124b0",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "P",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86d27b51-8503-4801-82aa-37e9f2da1781",
                    "path": "<Keyboard>/semicolon",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "M",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "id": "33933d68-01bb-4cd7-a504-ddcc1820ab39",
            "actions": [],
            "bindings": []
        },
        {
            "name": "Oculus",
            "id": "ebfd3824-83e2-4728-b80e-67a47ec5c4fe",
            "actions": [],
            "bindings": []
        },
        {
            "name": "Touch",
            "id": "e728e72e-33cd-4403-b1b1-260f9cea57c2",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": [
        {
            "name": "MouseKeyboard",
            "bindingGroup": "MouseKeyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}